--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>BTC L2 Viewer</title>
+  <meta charset="UTF-8" />
+  <title>BTC Order Book Viewer</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
+    body { font-family: sans-serif; padding: 20px; }
     pre {
-      background: #f4f4f4;
-      padding: 15px;
+      background: #f0f0f0;
+      padding: 10px;
       border: 1px solid #ccc;
-      overflow-x: auto;
+      max-height: 500px;
+      overflow: auto;
     }
   </style>
 </head>
 <body>
-  <h1>Latest BTC Order Book Snapshots</h1>
+  <h1>BTC Level 2 Order Book Snapshots</h1>
   <pre id="output">Loading...</pre>
 
-
-  <script src="script.js"></script>
+  <!-- External JavaScript -->
+  <script src="app.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
