working in local storage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <pre id="output">Loading...</pre>
 
   <!-- External JavaScript -->
+  <button id="myButton">Click to Run Code</button>
+  <script type = "module" src = "run.js"></script>
   <script src="app.js"></script>
-  <script src = "script.js"></script>
+  <script type = "module" src = "script.js"></script>
 </body>
 </html>
