Final version working

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <h1>BTC Level 2 Order Book Snapshots</h1>
   <pre id="output">Loading...</pre>
-
+  <ul id="item-list" class="items"></ul>
   <!-- External JavaScript -->
   <button id="myButton">Click to Run Code</button>
   <script type = "module" src = "run.js"></script>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
   <script type = "module" src = "script.js"></script>
 </body>
 </html>
