--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>BTC Level 2 Order Book Snapshots</h1>
-  <pre id="output">Loading...</pre>
+  <pre id="output">Run below</pre>
   <ul id="item-list" class="items"></ul>
   <!-- External JavaScript -->
   <button id="myButton">Click to Run Code</button>
